import java.util.List;
import java.util.ArrayList;

public class Catalogue {
    private List<Produit> produits = new ArrayList<>();

    public Catalogue() {
    }

    public List<Produit> rechercherProduit() {
        return null;
    }

    public List<Produit> getProduits() {
        return produits;
    }

    public void setProduits(List<Produit> produits) {
        this.produits = produits;
    }
}