@startuml
skinparam classAttributeIconSize 0

abstract class Utilisateur {
  +id: int
  +nom: String
  +email: String
  +motDePasse: String
  +authentifier(): boolean
}

class Client {
  +adresse: String
  +sInscrire(): void
  +passerCommande(): Commande
  +declarerPanne(): Ticket
  +suivreTicket(): String
}

class Technicien {
  +specialite: String
  +visualiserPlanning(): void
  +saisirRapportIntervention(): void
}

class Administrateur {
  +role: String
  +gererStocks(): void
  +affecterTechnicien(): void
  +gererComptesUtilisateurs(): void
  +genererFacture(): Facture
  +consulterDashboardCA(): void
}

class Produit {
  +id: int
  +nom: String
  +description: String
  +prix: double
  +quantiteStock: int
}

class Catalogue {
  +produits: List<Produit>
  +rechercherProduit(): List<Produit>
}

class Commande {
  +id: int
  +dateCommande: Date
  +statut: String
  +montantTotal: double
}

class LigneCommande {
  +quantite: int
  +prixUnitaire: double
}

class Facture {
  +id: int
  +dateFacture: Date
  +montantTotal: double
  +statut: String
}

class Ticket {
  +id: int
  +description: String
  +dateCreation: Date
  +statut: String
  +priorite: String
}

class Intervention {
  +id: int
  +dateIntervention: Date
  +rapport: String
  +statut: String
}

Utilisateur <|-- Client
Utilisateur <|-- Technicien
Utilisateur <|-- Administrateur

Client "1" --> "*" Commande
Commande "1" --> "*" LigneCommande
LigneCommande "*" --> "1" Produit
Client "1" --> "*" Ticket
Ticket "0..1" --> "1" Technicien : affecter
Ticket "1" --> "0..*" Intervention
Technicien "1" --> "*" Intervention
Commande "1" --> "1" Facture
Catalogue "1" --> "*" Produit
Administrateur "1" --> "*" Produit : gérer stock
Administrateur "1" --> "*" Utilisateur : gérer comptes

@enduml